--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>cucumber-picocontainer</artifactId>
             <version>1.2.4</version>
         </dependency>
+         
+        <dependency>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
+            </dependency>      
 
     </dependencies>
 
